--- a/Formulario/styles.css
+++ b/Formulario/styles.css
@@ -39,7 +39,7 @@ label {
 }
 
 input, select, textarea {
-    width: 100%;
+    width: 90%;
     padding: 8px;
     margin-top: 5px;
     border: 1px solid #ccc;
@@ -119,7 +119,7 @@ legend {
 
 
 textarea {
-    width: 70%; /* Se ajusta al ancho del formulario */
+    width: 80%; /* Se ajusta al ancho del formulario */
     max-width: 100%; /* Evita que se expanda más allá del formulario */
     min-height: 100px; /* Ajusta la altura mínima */
     padding: 8px;
@@ -127,3 +127,66 @@ textarea {
     border: 1px solid #ccc;
     font-family: Arial, sans-serif;
 }
+
+input, textarea {
+    border: 1px solid gray;
+    border-radius: 5px;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  input:focus, textarea:focus {
+    border: 2px;
+    background-color: #f0f8ff;
+    transform: scale(1.05);
+  }
+
+@keyframes aparecer {
+    from {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+}
+  
+form {
+    animation: aparecer 0.5s ease-out;
+}
+
+
+/* Estilos para pantallas grandes (escritorio) */
+@media (min-width: 1024px) {
+    body h2{
+      font-size: 32px;
+    }
+}
+  
+/* Estilos para tablets */
+@media (max-width: 1024px) and (min-width: 768px) {
+    body h2{
+      font-size: 28px;
+    }
+}
+  
+/* Estilos para móviles */
+@media (max-width: 768px) {
+    body h2 {
+      font-size: 24px;
+    }
+}
+
+/* En modo vertical */
+@media (orientation: portrait) {
+    body {
+      background-color: #0056b3;
+    }
+  }
+  
+  /* En modo horizontal */
+@media (orientation: landscape) {
+    body {
+      background-color: #00adb3;
+    }
+}  
